<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Dashboard.Landing_page"
    android:background="@color/greyishwhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            tools:ignore="UselessParent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:text="@string/welcome_back_nstudent">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/here_is_your_erp"
                    android:textColor="@color/greyish_black"
                    android:textSize="16sp">
                </TextView>

            </LinearLayout>
                <View
                    android:layout_width="100dp"
                    android:layout_height="0dp">

                </View>

                <ImageButton
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/profile_pic"
                    android:background="#00000000"
                    android:contentDescription="@string/profile_pic">

                </ImageButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:autofillHints="Username"
                android:background="@drawable/search_shape"
                android:drawableStart="@drawable/search"
                android:drawablePadding="15dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/search"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="#707070"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry">

            </EditText>

                <View
                    android:layout_width="30dp"
                    android:layout_height="0dp">

                </View>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/preferences_pic"
                    android:background="@drawable/preference_shape"
                    android:padding="10dp"
                    android:contentDescription="@string/preferences">
                </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/your_dashboard"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:backgroundTint="@color/blue"
                android:background="@drawable/search_shape"
                android:padding="20dp"
                android:layout_marginBottom="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/attendance"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="22sp">

                    </TextView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_foreward_1"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">
                    </ImageView>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Attandance_text"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp">
                </TextView>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="25dp">
<!--                    seekbar-->
                    <TextView
                        android:id="@+id/tv_attendance_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_75"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/black"
                        android:paddingEnd="15dp"
                        tools:ignore="RelativeOverlap,RtlSymmetry">
                    </TextView>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/search_shape"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/fees"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="22sp">

                    </TextView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_forward_2"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">
                    </ImageView>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/Fees_text"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp">
                </TextView>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="25dp">

<!--                    <com.jem.rubberpicker.RubberSeekBar-->
<!--                        app:minValue="20"-->
<!--                        app:maxValue="80"-->
<!--                        app:elasticBehavior="cubic"-->
<!--                        app:dampingRatio="0.3"-->
<!--                        app:stiffness="300"-->
<!--                        app:stretchRange="24dp"-->
<!--                        app:defaultThumbRadius="16dp"-->
<!--                        app:normalTrackWidth="4dp"-->
<!--                        app:highlightTrackWidth="8dp"-->
<!--                        app:normalTrackColor="#AAAAAA"-->
<!--                        app:highlightTrackColor="#BA1F33"-->
<!--                        app:defaultThumbInsideColor="#FFF"-->
<!--                        app:highlightDefaultThumbOnTouchColor="#CD5D67"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_width="wrap_content">-->

<!--                    </com.jem.rubberpicker.RubberSeekBar>-->
                    <TextView
                        android:id="@+id/fees_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_75"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/black"
                        android:paddingEnd="15dp"
                        tools:ignore="RelativeOverlap,RtlSymmetry">
                    </TextView>
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>